[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
# `setuptools_scm` is pinned to avoid `No module named 'vcs_versioning'`
# error with 10.0.2
requires = ["setuptools>=40.8.0", "wheel", "setuptools_scm==9.2.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "error"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src/"

[tool.coverage.run]
relative_files = true
